  . Fixed bug #60717 (Order of traits in use statement can cause a fatal
    error). (Stefan)
  . Fixed bug #60573 (type hinting with "self" keyword causes weird errors).
    (Laruence)
  . Fixed bug #60569 (Nullbyte truncates Exception $message). (Ilia)
  . Fixed bug #52719 (array_walk_recursive crashes if third param of the
    function is by reference). (Nikita Popov)

- FPM
  . Fixed bug #61430 (Transposed memset() params in sapi/fpm/fpm/fpm_shm.c).
    (michaelhood at gmail dot com, Ilia)

- Ibase
  . Fixed bug #60947 (Segmentation fault while executing ibase_db_info).
    (Ilia)

- Installation
  . Fixed bug #61172 (Add Apache 2.4 support). (Chris Jones)

- mbstring:
  . MFH mb_ereg_replace_callback() for security enhancements. (Rui)

- mysqli
  . Fixed bug #61003 (mysql_stat() require a valid connection). (Johannes).

- mysqlnd
  . Fixed bug #60948 (mysqlnd FTBFS when -Wformat-security is enabled).
    (Johannes)

- Readline:
  . Fixed bug #61088 (Memory leak in readline_callback_handler_install).
    (Nikic, Laruence)

- Session
  . Fixed bug #60634 (Segmentation fault when trying to die() in 
    SessionHandler::write()). (Ilia)

- SOAP
  . Fixed bug #61423 (gzip compression fails). (Ilia)
  . Fixed bug #60887 (SoapClient ignores user_agent option and sends no
    User-Agent header). (carloschilazo at gmail dot com)
  . Fixed bug #60842, #51775 (Chunked response parsing error when 
    chunksize length line is > 10 bytes). (Ilia)
  . Fixed bug #49853 (Soap Client stream context header option ignored).
    (Dmitry)

- PDO
  . Fixed bug #61292 (Segfault while calling a method on an overloaded PDO 
    object). (Laruence)

- PDO_mysql
  . Fixed bug #61207 (PDO::nextRowset() after a multi-statement query doesn't
    always work). (Johannes)
  . Fixed bug #61194 (PDO should export compression flag with myslqnd).
    (Johannes)

- PDO_odbc
  . Fixed bug #61212 (PDO ODBC Segfaults on SQL_SUCESS_WITH_INFO). (Ilia)

- Phar